--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       }
     </style>
     
-    <!-- <script>
+    <script>
       if ("serviceWorker" in navigator) {
         navigator.serviceWorker
           .register("/sw.js")
@@ -61,6 +61,6 @@
             console.error("Service Worker registration failed:", error);
           });
       }
-    </script> -->
+    </script>
   </body>
 </html>
